--- a/package.json
+++ b/package.json
@@ -18,18 +18,23 @@
     "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "esbuild": "^0.25.10",
     "jest": "^30.1.3",
     "pino-pretty": "^13.1.1",
     "supertest": "^7.1.4",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
     "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigatewayv2-alpha": "^2.114.1-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.114.1-alpha.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.203.0",
+    "@codegenie/serverless-express": "^4.17.0",
+    "aws-cdk-lib": "^2.215.0",
     "axios": "^1.12.2",
     "axios-retry": "^4.5.0",
+    "constructs": "^10.4.2",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.2",
@@ -37,6 +42,7 @@
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "pino": "^9.11.0",
+    "source-map-support": "^0.5.21",
     "zod": "^4.1.11"
   }
 }
